--- a/index.html
+++ b/index.html
@@ -3,125 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <title>Triffid Variable Font Tester</title>
-  <style>
-    @font-face {
-      font-family: 'TriffidWeightVF';
-      src: url('TriffidWeightVF.woff2') format('woff2');
-    }
-
-    @font-face {
-      font-family: 'TriffidCarnVF';
-      src: url('TriffidCarnVF.woff2') format('woff2');
-    }
-
-    @font-face {
-      font-family: 'TriffidBloomer';
-      src: url('Triffid-BloomerRg.woff2') format('woff2');
-    }
-
-    body {
-      margin: 0;
-      padding: 2em;
-      background: #f5dfcd;
-      font-family: serif;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-      justify-content: flex-start;
-      min-height: 100vh;
-    }
-
-    .tester {
-      width: 100%;
-      max-width: 800px;
-    }
-
-    .test-box {
-      margin-bottom: 30px;
-    }
-
-    .controls {
-      display: flex;
-      flex-wrap: wrap;
-      gap: 2em;
-      justify-content: center;
-      margin-bottom: 1.5em;
-    }
-
-    .control-group {
-      display: flex;
-      align-items: center;
-      gap: 1em;
-      flex: 1;
-      min-width: 200px;
-    }
-
-    .control-group label {
-      font-size: 1.2rem;
-      color: #111;
-      white-space: nowrap;
-      font-family: 'TriffidBloomer';
-    }
-
-    .sample {
-      height: 300px;
-      background: #111;
-      color: #F5DFCE;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      text-align: center;
-      font-size: 80px;
-      border-radius: 8px;
-      cursor: text;
-      padding: 0.25em;
-      margin-left: auto;
-      margin-right: auto;
-      overflow: hidden;
-      white-space: normal;
-    }
-
-    .sample.weight {
-      font-family: 'TriffidWeightVF';
-      font-variation-settings: 'wght' 400;
-    }
-
-    .sample.carnivore {
-      font-family: 'TriffidCarnVF';
-      font-variation-settings: 'CRNV' 0;
-    }
-
-    input[type="range"] {
-      -webkit-appearance: none;
-      width: 100%;
-      height: 3px;
-      background: black;
-      border-radius: 2px;
-      outline: none;
-      transition: background 0.3s ease;
-    }
-
-    input[type="range"]::-webkit-slider-thumb {
-      -webkit-appearance: none;
-      appearance: none;
-      width: 14px;
-      height: 14px;
-      background: #111;
-      border: 2px solid black;
-      border-radius: 50%;
-      cursor: pointer;
-      transition: background 0.3s ease;
-    }
-
-    input[type="range"]::-moz-range-thumb {
-      width: 14px;
-      height: 14px;
-      background: #111;
-      border: 2px solid black;
-      border-radius: 50%;
-      cursor: pointer;
-    }
-  </style>
+  <link rel="stylesheet" href="styles.css" />
 </head>
 <body>
 
@@ -159,38 +41,6 @@
 
   </div>
 
-  <script>
-    const weightSample = document.getElementById('weightSample');
-    const weightSize = document.getElementById('weightSize');
-    const weightSlider = document.getElementById('weightSlider');
-
-    const crnvSample = document.getElementById('crnvSample');
-    const crnvSize = document.getElementById('crnvSize');
-    const crnvSlider = document.getElementById('crnvSlider');
-
-    function updateWeightSample() {
-      weightSample.style.fontSize = `${weightSize.value}px`;
-      weightSample.style.fontVariationSettings = `'wght' ${weightSlider.value}`;
-      weightSample.style.fontWeight = weightSlider.value; // Important for rendering
-    }
-
-    function updateCrnvSample() {
-      crnvSample.style.fontSize = `${crnvSize.value}px`;
-      crnvSample.style.fontVariationSettings = `'CRNV' ${crnvSlider.value}`;
-    }
-
-    [weightSize, weightSlider].forEach(input => {
-      input.addEventListener('input', updateWeightSample);
-    });
-
-    [crnvSize, crnvSlider].forEach(input => {
-      input.addEventListener('input', updateCrnvSample);
-    });
-
-    updateWeightSample();
-    updateCrnvSample();
-  </script>
-
+  <script src="script.js"></script>
 </body>
 </html>
-
